syntax = "proto3";

package audio_recorder.protos;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AudioServer {
    rpc StartRecording (StartRecordingRequest) returns (StartRecordingResponse) {
    }
    rpc StopRecording (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }

    rpc GetStatus(google.protobuf.Empty) returns (Status) {
    }

    rpc GetLevels (LevelsRequest) returns (stream AudioLevels) {
    }

    rpc SetMixer (AudioLevels) returns (google.protobuf.Empty) {
    }

    rpc GetMixer (google.protobuf.Empty) returns (AudioLevels) {
    }

    rpc SetTime(google.protobuf.Timestamp) returns (google.protobuf.Empty) {
    }
    
    rpc StartTimeSync(google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
}

message StartRecordingRequest {
    uint64 time = 1;
}

message StartRecordingResponse {
    bool synced = 1;
}

message Status {
    enum RecorderState {
        STOPPED = 0;
        WAITING = 1;
        RECORDING = 2;
    }
    RecorderState recorder_state = 1;
}

message LevelsRequest {
    bool average = 1;
}

message AudioLevels {
    repeated float channels = 1;
}
